# sushi-queue

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py  menu.py
app/core/: SECURITY_ARCHITECTURE.md  config.py  database.py  db_sync.py  redis.py  redis_sync.py  security.py
app/models/: ARCHITECTURE.md  __init__.py  menu_item.py  order.py  order_item.py  user.py
app/schemas/: ARCHITECTURE.md  menu.py  order.py  user.py
app/services/: menu_service.py  user_service.py
app/tasks/: celery_app.py  cleanup_tasks.py  order_tasks.py
migrations/: env.py
migrations/versions/: 03a7967d0789_add_orderitem_model.py  1cbac6f99447_add_menu_items_orders_order_items_added_.py  819ee8dbf5f8_add_order_model_added_in_env_this_time.py  9b23c773817b_add_order_model.py  e4c7fc443ae4_add_users_table.py  f90c5aa9fdab_add_menu_items_orders_order_items.py
scripts/: seed_db.py
