[project]
name = "sushi-queue"
version = "0.1.0"
description = "Async sushi order backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "redis>=5.2",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "psycopg2-binary>=2.9",
    "nicegui>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25"
]
